--- a/src/app/pages/authentication/login/login.component.html
+++ b/src/app/pages/authentication/login/login.component.html
@@ -1,98 +1,98 @@
 <section>
-  <div
-    class="flex flex-col items-center justify-center px-6 py-8 mx-auto h-screen lg:py-0 transition bg-gray-50-100"
-  >
-    <a
-      href="#"
-      class="flex items-center justify-center mb-6 text-2xl font-semibold text-gray-900 dark:text-white"
-    >
-      <img class="w-2/6 mr-2" src="/assets/images/logo.png" alt="logo"/>
-    </a>
     <div
-      class="absolute w-full h-1/2 bottom-0 z-0 right-0 bg-gradient-to-b from-transparent dark:2xl:border-zinc-700 dark:from-black/10 to-yellow-50 dark:hidden dark:text-gray-200 overflow-x-hidden ease-linear overflow-hidden login-card"
-    ></div>
-    <div
-      class="w-full bg-white z-10 rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700 duration-1000 border-zinc-200"
+            class="flex flex-col items-center justify-center px-6 py-8 mx-auto h-screen lg:py-0 transition bg-gray-50-100"
     >
-      <div class="p-6 space-y-4 md:space-y-6 sm:p-8 z-10">
-        <h1
-          class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white mb-10"
+        <a
+                href="#"
+                class="flex items-center justify-center mb-6 text-2xl font-semibold text-gray-900 dark:text-white"
         >
-          Sign in to your account
-        </h1>
-        <form class="space-y-4 md:space-y-6" [formGroup]="loginForm" (submit)="login()">
-          <div class="mt-5">
-            <label
-              for="email"
-              class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-            >Your email</label
-            >
-            <tui-input formControlName="email">
-              Type an email
-              <input
-                tuiTextfieldSize="m"
-                [style.fill]="'red'"
-                tuiTextfield
-                autocomplete="username"
-                type="text"
-                name="password"
-                id="email"
-                placeholder="ouharri@marjane.ma"
-                class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-              />
-            </tui-input>
-          </div>
-          <div class="mb-5">
-            <label
-              for="password"
-              class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-            >Password
-            </label>
-            <tui-input-password formControlName="password">
-              Type an password
-              <input
-                tuiTextfield
-                tuiTextfieldSize="m"
-                id="password"
-                name="password"
-                type="password"
-                placeholder="********"
-                autocomplete="current-password"
-                class="password-input bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-              />
-            </tui-input-password>
-          </div>
-          <div class="flex mt-5 items-center justify-between">
-            <div class="flex items-center justify-center mt-5">
-              <div class="flex items-center h-5">
-                <input
-                  id="remember"
-                  aria-describedby="remember"
-                  type="checkbox"
-                  class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-primary-600 dark:ring-offset-gray-800"
-                />
-              </div>
-              <div class="ml-3 text-sm">
-                <label for="remember" class="text-gray-500 dark:text-gray-300"
-                >Remember me</label
+            <img class="w-2/6 mr-2" src="/assets/images/logo.png" alt="logo"/>
+        </a>
+        <div
+                class="absolute w-full h-1/2 bottom-0 z-0 right-0 bg-gradient-to-b from-transparent dark:2xl:border-zinc-700 dark:from-black/10 to-yellow-50 dark:hidden dark:text-gray-200 overflow-x-hidden ease-linear overflow-hidden login-card"
+        ></div>
+        <div
+                class="w-full bg-white z-10 rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700 duration-1000 border-zinc-200"
+        >
+            <div class="p-6 space-y-4 md:space-y-6 sm:p-8 z-10">
+                <h1
+                        class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white mb-10"
                 >
-              </div>
+                    Sign in to your account
+                </h1>
+                <form class="space-y-4 md:space-y-6" [formGroup]="loginForm" (submit)="login()">
+                    <div class="mt-5">
+                        <label
+                                for="email"
+                                class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                        >Your email</label
+                        >
+                        <tui-input formControlName="email">
+                            Type an email
+                            <input
+                                    tuiTextfieldSize="m"
+                                    [style.xxxxxxxxxxxxx]="'red'"
+                                    tuiTextfield
+                                    autocomplete="username"
+                                    type="text"
+                                    name="password"
+                                    id="email"
+                                    placeholder="ouharri@marjane.ma"
+                                    class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                            />
+                        </tui-input>
+                    </div>
+                    <div class="mb-5">
+                        <label
+                                for="password"
+                                class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                        >Password
+                        </label>
+                        <tui-input-password formControlName="password">
+                            Type an password
+                            <input
+                                    tuiTextfield
+                                    tuiTextfieldSize="m"
+                                    id="password"
+                                    name="password"
+                                    type="password"
+                                    placeholder="********"
+                                    autocomplete="current-password"
+                                    class="password-input bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                            />
+                        </tui-input-password>
+                    </div>
+                    <div class="flex mt-5 items-center justify-between">
+                        <div class="flex items-center justify-center mt-5">
+                            <div class="flex items-center h-5">
+                                <input
+                                        id="remember"
+                                        aria-describedby="remember"
+                                        type="checkbox"
+                                        class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-primary-600 dark:ring-offset-gray-800"
+                                />
+                            </div>
+                            <div class="ml-3 text-sm">
+                                <label for="remember" class="text-gray-500 dark:text-gray-300"
+                                >Remember me</label
+                                >
+                            </div>
+                        </div>
+                        <a
+                                href="#"
+                                class="hover:underline text-[#ffe804] dark:text-white forgot-password-text mt-5"
+                        >
+                            Forgot password?
+                        </a>
+                    </div>
+                    <button
+                            class="w-full login-btn text-white dark:bg-blue-800 hover:bg-sky-600 focus:ring-4 disabled:cursor-not-allowed focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
+                            type="submit" [disabled]="isButtonDisabled"
+                    >
+                        Sign in
+                    </button>
+                </form>
             </div>
-            <a
-              href="#"
-              class="hover:underline text-[#ffe804] dark:text-white forgot-password-text mt-5"
-            >
-              Forgot password?
-            </a>
-          </div>
-          <button
-            class="w-full login-btn text-white dark:bg-blue-800 hover:bg-sky-600 focus:ring-4 disabled:cursor-not-allowed focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
-            type="submit" [disabled]="isButtonDisabled"
-          >
-            Sign in
-          </button>
-        </form>
-      </div>
+        </div>
     </div>
-  </div>
 </section>
