--- a/src/app/shared/components/test/test.component.html
+++ b/src/app/shared/components/test/test.component.html
@@ -1,31 +1,32 @@
 <div class="wrapper flex">
-  <tui-calendar
-    [maxViewedMonth]="firstMonth"
-    [month]="firstMonth"
-    [showAdjacent]="false"
-    [value]="value"
-    [(hoveredItem)]="hoveredItem"
-    (dayClick)="onDayClick($event)"
-    (monthChange)="onMonthChangeFirst($event)"
-  ></tui-calendar>
-  <tui-calendar
-    [maxViewedMonth]="middleMonth"
-    [minViewedMonth]="middleMonth"
-    [month]="middleMonth"
-    [showAdjacent]="false"
-    [value]="value"
-    [(hoveredItem)]="hoveredItem"
-    (dayClick)="onDayClick($event)"
-    (monthChange)="onMonthChangeMiddle($event)"
-  ></tui-calendar>
-  <tui-calendar
-    [minViewedMonth]="lastMonth"
-    [month]="lastMonth"
-    [showAdjacent]="false"
-    [value]="value"
-    [(hoveredItem)]="hoveredItem"
-    (dayClick)="onDayClick($event)"
-    (monthChange)="onMonthChangeLast($event)"
-  ></tui-calendar>
+    <app-side-bar></app-side-bar>
+    <tui-calendar
+            [maxViewedMonth]="firstMonth"
+            [month]="firstMonth"
+            [showAdjacent]="false"
+            [value]="value"
+            [(hoveredItem)]="hoveredItem"
+            (dayClick)="onDayClick($event)"
+            (monthChange)="onMonthChangeFirst($event)"
+    ></tui-calendar>
+    <tui-calendar
+            [maxViewedMonth]="middleMonth"
+            [minViewedMonth]="middleMonth"
+            [month]="middleMonth"
+            [showAdjacent]="false"
+            [value]="value"
+            [(hoveredItem)]="hoveredItem"
+            (dayClick)="onDayClick($event)"
+            (monthChange)="onMonthChangeMiddle($event)"
+    ></tui-calendar>
+    <tui-calendar
+            [minViewedMonth]="lastMonth"
+            [month]="lastMonth"
+            [showAdjacent]="false"
+            [value]="value"
+            [(hoveredItem)]="hoveredItem"
+            (dayClick)="onDayClick($event)"
+            (monthChange)="onMonthChangeLast($event)"
+    ></tui-calendar>
 </div>
 <div *ngIf="value">Chosen dates: {{ value }}</div>
