--- a/src/styles.css
+++ b/src/styles.css
@@ -22,3 +22,7 @@ input:-webkit-autofill:focus {
 input[data-autocompleted] {
   background-color: transparent !important;
 }
+
+.tui-input {
+  border: 0 !important;
+}
