--- a/src/app/pages/admin/promotion/promotion.component.html
+++ b/src/app/pages/admin/promotion/promotion.component.html
@@ -124,6 +124,7 @@
                       </li>
                       <li>
                         <button
+                                *ngFor="let page of pages"
                                 class="px-3 py-1 rounded-md focus:outline-none focus:shadow-outline-purple"
                         >
                           1
@@ -131,7 +132,7 @@
                       </li>
                       <li>
                         <button
-                                class="px-3 py-1 text-white transition-colors duration-150 border border-r-0 border-purple-600 rounded-md focus:outline-none focus:shadow-outline-purple"
+                                class="px-3 py-1 text-blue-900 stroke-1 transition-colors duration-150 border border-r-0 border-blue-800 rounded-md focus:outline-none focus:shadow-outline-purple"
                         >
                           3
                         </button>
