--- a/src/app/pages/admin/add-promotion/add-promotion.component.html
+++ b/src/app/pages/admin/add-promotion/add-promotion.component.html
@@ -27,7 +27,8 @@
             <label class="block text-sm" for="interval">
                 <h2 class="my-6 text-2xl font-semibold text-yellow-300 dark:text-gray-200">Promotion interval :</h2>
             </label>
-            <app-calendar (statDateChange)="setStartDate($event)" (endDateChange)="setEndDate($event)" id="interval"></app-calendar>
+            <app-calendar (statDateChange)="setStartDate($event)" (endDateChange)="setEndDate($event)"
+                          id="interval"></app-calendar>
         </div>
     </div>
     <div class="flex justify-between">
