--- a/src/app/pages/admin/promotion/promotion.component.html
+++ b/src/app/pages/admin/promotion/promotion.component.html
@@ -97,7 +97,7 @@
                     class="w-full md:grid whitespace-no-wrap px-4 py-3 text-xs font-semibold tracking-wide text-gray-500 uppercase border-t dark:border-gray-700 bg-gray-50 sm:grid-cols-9 dark:text-gray-400 dark:bg-gray-800 transition duration-700 ease-in-out"
             >
                 <span class="flex items-center col-span-3">
-                  Showing 21-30 of 100
+                  Showing 7
                 </span>
                 <span class="col-span-2"></span>
                 <!-- Pagination -->
@@ -122,9 +122,9 @@
                           </svg>
                         </button>
                       </li>
-                      <li>
+                      <li *ngFor="let page of loopArray; let i = index" (click)="changePage(i + 1)"
+                          class="flex flex-1 justify-evenly">
                         <button
-                                *ngFor="let page of loopArray; let i = index" (click)="changePage(i + 1)"
                                 class="px-3 py-1 rounded-md focus:outline-none focus:shadow-outline-purple"
                                 [class]="currentPage == i + 1 ? 'bg-[#0155a7] text-white' : 'bg-white'"
                         >
