--- a/src/app/pages/responsable/validation/validation.component.html
+++ b/src/app/pages/responsable/validation/validation.component.html
@@ -7,13 +7,6 @@
                     <h2 class="my-6 text-2xl font-semibold text-gray-700 dark:text-gray-200">
                         Promotions :
                     </h2>
-                    <div class="cursor-pointer" (click)="showDialog()">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24"
-                             style="fill: #0155a7;">
-                            <path d="M16 2H8C4.691 2 2 4.691 2 8v13a1 1 0 0 0 1 1h13c3.309 0 6-2.691 6-6V8c0-3.309-2.691-6-6-6zm4 14c0 2.206-1.794 4-4 4H4V8c0-2.206 1.794-4 4-4h8c2.206 0 4 1.794 4 4v8z"></path>
-                            <path d="M13 7h-2v4H7v2h4v4h2v-4h4v-2h-4z"></path>
-                        </svg>
-                    </div>
                 </div>
                 <table class="w-full whitespace-no-wrap">
                     <thead>
@@ -53,39 +46,20 @@
                         </span>
                         </td>
                         <td class="px-4 py-3">
-                            <div class="flex items-center space-x-4 text-sm">
+                            <div class="flex items-center justify-center space-x-4 text-sm">
                                 <button
-                                        class="flex items-center justify-between px-2 py-2 text-sm font-medium leading-5 rounded-lg dark:text-gray-400 focus:outline-none focus:shadow-outline-gray"
+                                        class="text-white px-6 py-2 rounded-3xl focus:outline-none focus:shadow-outline-gray bg-[#0155a7] hover:bg-blue-900 text-sm font-medium focus:shadow-outline-gray"
                                         aria-label="Edit"
-
+                                        (click)="acceptPromotion(promotion)"
                                 >
-                                    <svg
-                                            class="w-5 h-5"
-                                            aria-hidden="true"
-                                            fill="currentColor"
-                                            viewBox="0 0 20 20"
-                                    >
-                                        <path
-                                                d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z"
-                                        ></path>
-                                    </svg>
+                                    accepter
                                 </button>
                                 <button
-                                        class="flex items-center justify-between px-2 py-2 text-sm font-medium leading-5 rounded-lg dark:text-gray-400 focus:outline-none focus:shadow-outline-gray transition duration-700 ease-in-out"
-                                        aria-label="Delete"
+                                        class="text-white px-6 py-2 rounded-3xl focus:outline-none focus:shadow-outline-gray bg-red-600 hover:bg-blue-900 text-sm font-medium focus:shadow-outline-gray"
+                                        aria-label="Edit"
+                                        (click)="refuserPromontion(promotion)"
                                 >
-                                    <svg
-                                            class="w-5 h-5"
-                                            aria-hidden="true"
-                                            fill="currentColor"
-                                            viewBox="0 0 20 20"
-                                    >
-                                        <path
-                                                fill-rule="evenodd"
-                                                d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm5-1a1 1 0 00-1 1v6a1 1 0 102 0V8a1 1 0 00-1-1z"
-                                                clip-rule="evenodd"
-                                        ></path>
-                                    </svg>
+                                    refuser
                                 </button>
                             </div>
                         </td>
@@ -97,7 +71,7 @@
                     class="w-full md:grid whitespace-no-wrap px-4 py-3 text-xs font-semibold tracking-wide text-gray-500 uppercase border-t dark:border-gray-700 bg-gray-50 sm:grid-cols-9 dark:text-gray-400 dark:bg-gray-800 transition duration-700 ease-in-out"
             >
                 <span class="flex items-center col-span-3">
-                  Showing 21-30 of 100
+                  Showing 7
                 </span>
                 <span class="col-span-2"></span>
                 <!-- Pagination -->
@@ -122,9 +96,9 @@
                           </svg>
                         </button>
                       </li>
-                      <li>
+                      <li *ngFor="let page of loopArray; let i = index" (click)="changePage(i + 1)"
+                          class="flex flex-1 justify-evenly">
                         <button
-                                *ngFor="let page of loopArray; let i = index" (click)="changePage(i + 1)"
                                 class="px-3 py-1 rounded-md focus:outline-none focus:shadow-outline-purple"
                                 [class]="currentPage == i + 1 ? 'bg-[#0155a7] text-white' : 'bg-white'"
                         >
@@ -134,14 +108,14 @@
                         <li>
                         <button
                                 class="px-3 py-1 rounded-md rounded-l-lg focus:outline-none focus:shadow-outline-purple"
-                                aria-label="Previous""
+                                aria-label="Previous" (click)="nextPage()"
                         >
                             <svg class="w-4 h-4 fill-current"
                                  aria-hidden="true"
                                  viewBox="0 0 20 20"
                             ><path
                                     d="M10.707 17.707 16.414 12l-5.707-5.707-1.414 1.414L13.586 12l-4.293 4.293z"></path></svg>
-                            </button>
+                        </button>
                       </li>
                     </ul>
                   </nav>
