--- a/src/app/pages/admin/home/home.component.html
+++ b/src/app/pages/admin/home/home.component.html
@@ -1,6 +1,6 @@
 <section class="flex ">
     <app-side-bar></app-side-bar>
     <div class="relative overflow-x-auto sm:rounded-lg w-full p-14">
-
+        <app-statistic></app-statistic>
     </div>
 </section>
